test_scores/negative_dimers/features/Q8NE71.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q8NE71.pkl.xz